Kubernetes/Lab.RateMyBeer.Frontend/overlays/https/deployment-frontend-changeEnvironment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-ratemybeer-frontend
spec:
  template:
    spec:
      containers:
      - name: lab-ratemybeer-frontend
