Kubernetes/Lab.RateMyBeer.Frontend/overlays/https/ingress-frontend-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ratemybeer-frontend
  
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod-http-issuer" # needed for tls

spec:
  # needed for tls
  tls:
  - hosts:
    - ratemybeer7428.westeurope.cloudapp.azure.com
    secretName: lab-ratemybeer-frontend-ssl
